// Copyright (C) 2024 Declan Teevan
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package stocklet.events.v1;

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/events/v1;events_v1";

message UserCreatedEvent {
  int32 revision = 1;

  string user_id = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}

message UserEmailUpdatedEvent {
  int32 revision = 1;

  string user_id = 2;
  string email = 3;
}

message UserDeletedEvent {
  int32 revision = 1;

  string user_id = 2;
  string email = 3;
}
